Adjusted tags in annotations for endpoints to get them from Pages or API and the other way around. Corrected to /api/weather
