# docs/swagger.json
@@ -116,7 +116,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Pages"
+                    "API"
                 ],
                 "summary": "Log users out.",
                 "responses": {
@@ -133,12 +133,38 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Pages"
+                    "API"
                 ],
                 "summary": "Fetch query data.",
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "500": {
+                        "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/weather": {
+            "get": {
+                "description": "Fetch a seven-day weather forecast for Copenhagen.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "API"
+                ],
+                "summary": "Fetch weather forecast.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.StandardResponse"
+                        }
                     },
                     "500": {
                         "description": "error",
@@ -267,32 +293,6 @@
                         "description": "Unprocessable Entity",
                         "schema": {
                             "$ref": "#/definitions/handlers.HTTPValidationError"
-                        }
-                    }
-                }
-            }
-        },
-        "/weather": {
-            "get": {
-                "description": "Fetch a seven-day weather forecast for Copenhagen.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "API"
-                ],
-                "summary": "Fetch weather forecast.",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.StandardResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "error",
-                        "schema": {
-                            "type": "string"
                         }
                     }
                 }
